# CPCBF

./: .gitignore  README.md  benchmarking_framework_strategy.md  diagrams.md
cpcbf/: BLE_QUICKSTART.md  MKR_BLE_QUICKSTART.md  MKR_FIELD_DEPLOYMENT.md  MKR_WAN_QUICKSTART.md  MKR_WIFI_NINA_SPI_BOTTLENECK.md  MKR_WIFI_QUICKSTART.md  RPI4_BLE_QUICKSTART.md  inventory-field-rpi.yaml  inventory-lab-mkr.yaml  inventory-lab-rpi.yaml  inventory.yaml  pyproject.toml  run_analysis.py
cpcbf/agent/: CMakeLists.txt
cpcbf/agent/adapters/: ble_adapter.c  wifi_adapter.c
cpcbf/agent/common/: benchmark_packet.c  benchmark_packet.h  platform_hal.h  protocol_adapter.h  sync_barrier.c  sync_barrier.h  test_engine.c  test_engine.h
cpcbf/agent/tests/: test_packet_codec.c
cpcbf/analysis/: DB_QUICKSTART.md  README.md  compare.py  db.py  experiment_schema.json  ingest.py  metadata_cli.py  plots.py  run_analysis.py  stats.py  stats_from_json.py
cpcbf/controller/: agent_manager.py  cli.py  clock_sync.py  firmware_preflight.py  models.py  orchestrator.py  plan_parser.py  radio_isolation.py  serial_bridge_transport.py  ssh_transport.py
cpcbf/field/: README.md  active_plans.json  auto_bench.py  bluetooth_control_arbiter.py  bridge_sync.py  cpcbf-2_4ghz.service  cpcbf-auto.service  cpcbf-lora.service  deploy.sh  firmware_flash.py  merge_results.py  radio_isolation_local.py  role_mkr_wifi_receiver.json  role_mkr_wifi_sender.json  role_receiver.json  role_receiver_2_4ghz.json  role_receiver_lora.json  role_sender.json  role_sender_2_4ghz.json  role_sender_lora.json  serial_relay.py
cpcbf/field/udev/: 99-cpcbf-mkr.rules
cpcbf/inventory/: inventory-field-mkr.yaml  inventory-field-rpi.yaml  inventory-field-wan.yaml  inventory-lab-mkr.yaml  inventory-lab-wan.yaml
cpcbf/plans/: ble_rpi4.yaml  ble_rpi4_flood.yaml  ble_rpi4_flood_2m.yaml  ble_rpi4_rssi.yaml  ble_rpi4_rtt.yaml  wifi_mkr1010_quick_smoke.yaml  wifi_rpi4.yaml  wifi_rpi4_flood.yaml  wifi_rpi4_quick_smoke.yaml  wifi_rpi4_rtt.yaml
cpcbf/plans/arduino/ble/: ble_mkr1010.yaml  ble_mkr1010_flood.yaml  ble_mkr1010_quick_smoke.yaml  ble_mkr1010_rssi.yaml  ble_mkr1010_rtt.yaml
cpcbf/plans/arduino/lora/: lora_mkr1300.yaml  lora_mkr1300_flood.yaml  lora_mkr1300_rssi.yaml  lora_mkr1300_rtt.yaml
cpcbf/plans/arduino/wifi/: wifi_mkr1010.yaml  wifi_mkr1010_flood.yaml  wifi_mkr1010_quick_smoke.yaml  wifi_mkr1010_rssi.yaml  wifi_mkr1010_rtt.yaml
cpcbf/plans/field/track_2_4ghz/: 06_wifi_flood.yaml
cpcbf/plans/field/track_lora/: 01_lora_rssi.yaml  03_lora_flood.yaml
cpcbf/plans/rpi/ble/: ble_rpi4.yaml  ble_rpi4_flood.yaml  ble_rpi4_flood_2m.yaml  ble_rpi4_quick_smoke.yaml  ble_rpi4_rtt.yaml
cpcbf/plans/rpi/wifi/: wifi_rpi4.yaml  wifi_rpi4_flood.yaml  wifi_rpi4_quick_smoke.yaml  wifi_rpi4_rssi.yaml
